# ossm-models

./: CONTRIBUTING.md  README.md  SMS.xsd  pyproject.toml  requirements.txt  schema.xsd  template.json
ap_models/: model.py  validators.py
examples/: sample_fpn.xml
model-sample/: model.xml  sample_fpn.xml
ossm_models/: __init__.py  exceptions.py  validation.py
ossm_models/core/: __init__.py  configs.py  model.py  parsers.py  sms_types.py  types.py
sm-models/: model.py
